<resources>
    <string name="btn_1">BUTTON 1</string>
    <string name="btn_2">BUTTON 2</string>
    <string name="btn_3">BUTTON 3</string>
    <string name="btn_4">BUTTON 4</string>
    <string name="btn_5">BUTTON 5</string>
    <string name="btn_6">BUTTON 6</string>
    <string name="btn_7">BUTTON 7</string>
    <string name="btn_8">BUTTON 8</string>
    <string name="btn_9">BUTTON 9</string>
    <string name="btn_10">BUTTON 10</string>
    <string name="btn_11">BUTTON 11</string>
    <string name="btn_12">BUTTON 12</string>
</resources>